# criticeval

./: README.md  pyproject.toml
criticeval/: __init__.py  eval.py  structure.py  utils.py
criticeval/conf/: config.yaml
criticeval/conf/judger/: judger.yaml
criticeval/conf/solver/: solver.yaml
criticeval/extractors/: __init__.py  extractors.py  registry.py
criticeval/serve_model/: __init__.py  model_api.py  openai_backend.py  utils.py  vllm_backend.py
criticeval/templates/: __init__.py  formatter.py
criticeval/templates/templates/: base_judger.jinja  base_solver.jinja  judger_without_target.jinja
examples/: start_eval.sh
examples/data/: problems.csv
examples/scripts/data_process/: mathvista.py  physics.py
examples/scripts/data_process/data/: math_vista_example.csv
start_examples/: start_example.sh  start_example2.sh  start_example3.sh
start_examples/data/: math_vista_example.csv  solver_outputs.json
start_examples/outputs/: results.json
start_examples/outputs/2025-12-09/08-00-09/.hydra/: hydra.yaml
start_examples/outputs/2025-12-09/08-01-57/.hydra/: hydra.yaml
start_examples/outputs/2025-12-09/08-03-58/.hydra/: hydra.yaml
start_examples/outputs/2025-12-09/08-04-21/.hydra/: config.yaml  hydra.yaml
start_examples/outputs/2025-12-09/08-07-49/.hydra/: hydra.yaml  overrides.yaml
start_examples/outputs/2025-12-09/08-10-30/.hydra/: config.yaml  hydra.yaml  overrides.yaml
start_examples/outputs/2025-12-09/08-12-00/.hydra/: hydra.yaml
start_examples/outputs/solver_outputs/base/: solver_outputs.json
(+73 files in other folders)
