[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "criticeval"
version = "0.1.0"
description = "Module for testing "
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Sagitov Suleiman", email = "gopherbonk@gmail.com" }
]
dependencies = [
    "hydra-core",
    "omegaconf",
    "tqdm",
    "torch",
    "pandas",
    "vllm",
    "openai"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["criticeval*"]
